@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-01-01 DP  1.8.1  Properly reverse-engineer the SQL for indexes with DESC,
+                      NULLS FIRST or NULLS LAST column options. 
 2008-01-01 DP  1.8.1  Only offer the Jobs node if the user can access the
                       pgagent schema.
 2007-12-19 DP  1.8.1  Ensure the 'Create Rule' context menu option is always
